--- a/src/components/content-editor/styles/ToolbarPlugin.scss
+++ b/src/components/content-editor/styles/ToolbarPlugin.scss
@@ -60,9 +60,3 @@
     }
   }
 }
-
-@media (prefers-color-scheme: dark) {
-  .ContentEditor__editor-wrapper {
-    background: #aaa;
-  }
-}
