--- a/src/pages/iyf/styles/Posts.scss
+++ b/src/pages/iyf/styles/Posts.scss
@@ -14,3 +14,10 @@
     color: $color-secondary;
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  .PostItem__tags > span {
+    color: #000;
+    border: none;
+  }
+}
